# toydb

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
src/sql/: expression.rs  mod.rs  schema.rs
src/sql/engine/: mod.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs
src/sql/plan/: mod.rs  planner.rs
src/sql/types/: expression.rs  mod.rs
src/storage/log/: hybrid.rs  memory.rs  mod.rs
