[package]
name = "toydb"
version = "0.1.0"
edition = "2021"
authors = ["liangchangyoujackson@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
rand = "0.8.5"
regex = "1.8.1"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio-serde = "0.8.0"
