[package]
name = "toydb"
version = "0.1.0"
edition = "2021"
authors = ["liangchangyoujackson@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clippy = "0.0.302"
config = "0.13.3"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
regex = "1.8.4"
rustyline = "12.0.0"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = "1.29.1"
tokio-serde = "0.8.0"
tokio-util = "0.7.8"
